--- a/src/app/content/news/example1.mdx
+++ b/src/app/content/news/example1.mdx
@@ -2,6 +2,7 @@
 title: 'post #1'
 publishedAt: '2020-01-02'
 summary: lorem impuson dolor nut amen
+cover: /images/news.jpg
 ---
  
 We recommend using **Static Generation** (with and without data) whenever possible because your page can be built once and served by CDN, which makes it much faster than having a server render the page on every request.
